<resources>
    <string name="app_name">Thesis Fingerprint 2019</string>

    <string name="dialog_title_requierments">Required Permissions</string>
    <string name="dialog_title_permission">Camera &amp; Storage Permission</string>
    <string name="dialog_title_opencv">OpenCV</string>

    <string name="dialog_message_requierments">This app require permission to use awesome feature. Grant them in app
        settings.
    </string>
    <string name="dialog_message_permission">All permissions have to be granted, to start the app.</string>
    <string name="dialog_message_opencv">Initialization of OpenCV failed.</string>

    <string name="dialog_button_requierments">Settings</string>
    <string name="dialog_button_permission">Retry</string>
    <string name="dialog_button_quit">Quit</string>
    <string name="btnBackToMainMenu">Back to Main Menu</string>

    <string name="fragment_details_gender">Gender:</string>
    <string name="fragment_details_Name">Name:</string>
    <string name="fragment_details_age">Age:</string>
    <string name="fragment_details_skin_color">Skin Color:</string>
    <string name="fragment_details_location">Location:</string>
    <string name="fragment_details_illumination">Illumination:</string>
    <string name="fragment_details_vendor">Vendor:</string>

    <string name="fragment_finger_print_overview_no_entity">No fingerprints were found. Press the button on the lower
        right side to create a new one.
    </string>
    <string name="fragment_test_person_overview_no_entity">No test persons were found. Press the button on the lower
        right side to create a new one.
    </string>

    <string name="fragment_selection_record_set">Record Set #%1$s</string>
    <string name="fragment_selection_created_on">Created on :%1$s</string>
    <string name="title">Title</string>
    <string name="row_multiselect_right">Right</string>
    <string name="row_multiselect_left">Left</string>
    <string name="row_multiselect_thumb">Thumb</string>
    <string name="row_multiselect_index_finger">Index Finger</string>
    <string name="row_multiselect_middle_finger">Middle Finger</string>
    <string name="row_multiselect_ring_finger">Ring Finger</string>
    <string name="row_multiselect_little_finger">Little Finger</string>
    <string name="row_multiselect_four_fingers">Four Fingers</string>
    <string name="fragment_details_scan">Scan</string>
    <string name="placeholder">Placeholder</string>

    <string-array name="fragment_details_spinner_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="fragment_details_spinner_skin_color">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="fragment_details_spinner_location">
        <item>Indoor</item>
        <item>Outdoor</item>
    </string-array>

    <string name="fragment_test_person_overview">Testperson #%1$s</string>
    <string name="fragment_test_person_continue">Continue</string>
    <string name="fragment_details_resolution">Resolution:</string>

    <string name="fragment_details_id">ISO ID:</string>
    <string name="fragment_details_correction_degree">Degree:</string>
    <string name="fragment_details_correction_broken">Possibly broken:</string>
    <string name="export_db">Export DB</string>
    <string name="fragment_finger_scanning_frame_counter">%1$d/5</string>
    <string name="fragment_finger_scanning_frame_text">Number of successfully processed fingers:</string>
    <string name="fragment_finger_scanning_last_frame">Last frame in pipeline:</string>
    <string name="fragment_finger_scanning_record">Record</string>
    <string name="Autofill">Auto</string>

</resources>
