<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <de.dali.thesisfingerprint2019.ui.base.custom.SpinnerWithTitle
                    android:id="@+id/spinnerLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:title="@string/fragment_details_location"
                    app:values="@array/fragment_details_spinner_location"/>

            <de.dali.thesisfingerprint2019.ui.base.custom.EditTextWithTitle
                    android:id="@+id/editIllumination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:enabled="false"
                    app:title="@string/fragment_details_illumination"/>

            <de.dali.thesisfingerprint2019.ui.base.custom.EditTextWithTitle
                    android:id="@+id/editVendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:enabled="false"
                    app:title="@string/fragment_details_vendor"/>

            <include layout="@layout/row_multiselect"/>

            <Button
                    android:id="@+id/btnScan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_details_scan"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

    </ScrollView>

</layout>