<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <de.dali.thesisfingerprint2019.ui.base.custom.SpinnerWithTitle
                    android:id="@+id/spinnerGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:title="@string/fragment_details_gender"
                    app:values="@array/fragment_details_spinner_gender"/>

            <de.dali.thesisfingerprint2019.ui.base.custom.EditTextWithTitle
                    android:id="@+id/editAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:inputType="numerical"
                    app:enabled="true"
                    app:title="@string/fragment_details_age"/>

            <de.dali.thesisfingerprint2019.ui.base.custom.SpinnerWithTitle
                    android:id="@+id/spinnerColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:title="@string/fragment_details_skin_color"
                    app:values="@array/fragment_details_spinner_skin_color"/>

            <Button
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_test_person_continue"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

    </ScrollView>

</layout>