<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitleFinger"
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/cbLeft"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/cbLeft"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/cbRight"
            app:layout_constraintTop_toTopOf="@+id/cbRight"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"/>

    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbRight"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleRight"
            app:layout_constraintStart_toEndOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitleLeft"
            android:text="@string/row_multiselect_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="@+id/cbLeft"
            app:layout_constraintEnd_toEndOf="@+id/cbLeft"
            app:layout_constraintTop_toTopOf="@+id/txtTitleRight"
            app:layout_constraintBottom_toBottomOf="@+id/txtTitleRight"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/row_multiselect_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitleRight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cbRight"
            app:layout_constraintEnd_toEndOf="@+id/cbRight"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"
            app:layout_constraintGuide_percent="0.334"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline6"
            app:layout_constraintGuide_percent="0.667"/>

</androidx.constraintlayout.widget.ConstraintLayout>